<resources>
    <string name="retry">Retry</string>
    <string name="quit">Quit</string>
    <string name="proceed">Proceed</string>
    <string name="you_win">You Win!</string>
    <string name="play_again">Play Again</string>
    <string name="rematch">Rematch</string>
    <string name="main_menu">Main Menu</string>
    <string name="you_lose">You Lose</string>
    <string name="app_name">FlailsAndFriends</string>
    <string name="welcome">Welcome! \n Login or create an account:</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="create_an_account">Create an Account:</string>
    <string name="password_again">Password again</string>
    <string name="sign_up">SIGN UP!</string>
    <string name="back_to_welcome_screen">BACK TO WELCOME SCREEN</string>
    <string name="get_ready">Get Ready</string>
    <string name="fight">Fight!</string>
    <string name="make_your_choice">Make Your Choice</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="welcome_to_flails_n_friends">Welcome To Flails \'N\' Friends!</string>
    <string name="preference_file_key">projectPreferenceKey</string>
    <string name="preference_userid_key">preferenceUserIdKey</string>
    <string name="logged_in">Logged In</string>
    <string name="name">Name</string>
    <string name="equipment_name">Equipment Name</string>
    <string name="image_path">Image Path</string>
    <string name="enter_image_path">Enter Image Path</string>
    <string name="enter_buff_amount">Enter Buff Amount</string>
    <string name="buff">Buff</string>
    <string name="add_to_database">Add To Database</string>
    <string name="switch_admin_status">Switch Admin Status</string>
    <string name="enter_username">Enter Username</string>
    <string name="thanos_snap_user">Thanos Snap User</string>
    <string name="snap">Snap!</string>
    <string name="add_equipment">Add Equipment</string>
    <string name="admin_screen">Admin Screen</string>
    <string name="toggle_admin">Toggle Admin</string>
    <string name="retry">Retry</string>
    <string name="quit">Quit</string>
    <string name="inventory">INVENTORY</string>
</resources>