<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.csumb.flailsandfriends.activities.CreateAccountActivity">


    <TextView
        android:id="@+id/createAccountMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="30dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:autofillHints="Please enter a username."
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="text"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/createAccountMessage"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:autofillHints="Please enter a password."
        android:gravity="center"
        android:hint="@string/password"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_margin="40dp"
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:id="@+id/signUpButton"
        />

    <Button
        android:id="@+id/backToHome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="40dp"
        android:text="@string/back_to_welcome_screen"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>